Make the application Java 9/10 ready
This commit introduces a module description and modifies the build
script to be compatible with Java 8 to 10. Please note that Java
versions prior to Java 7 will throw an exception and that you need
to introduce a JavaFX dependency manually with Java 11.